# Infantry_code

./: Readme.md
infantry_bringup/: CMakeLists.txt  package.xml
infantry_bringup/config/: detection.yaml
infantry_bringup/launch/: image.launch  infantry-test.launch  infantry.launch
infantry_camera/: CMakeLists.txt  package.xml
infantry_camera/launch/: MER139.launch
infantry_camera/src/: GxCamera_node.cc
infantry_detection/: CMakeLists.txt  package.xml
infantry_detection/launch/: default.launch
infantry_detection/src/: serial_test.cpp
infantry_detection/src/AngleSolver/: AngleSolver.cpp  AngleSolver.h
infantry_detection/src/Armor/: Armor.h  ArmorBox.cpp  ArmorDetector.cpp  ArmorNumClassifier.cpp
infantry_detection/src/General/: General.h
infantry_detection/src/Main/: ArmorDetecting.cpp  main.cpp
infantry_model/: CMakeLists.txt  package.xml
infantry_model/launch/: display.launch
infantry_model/rviz/: urdf.rviz
infantry_model/urdf/: infantry.urdf
infantry_msgs/: CMakeLists.txt  package.xml
infantry_msgs/msg/: ArmorPose.msg  ArmorPosePacket.msg  GimbalSetAngle.msg  TargetPacket.msg
infantry_predict/: CMakeLists.txt  main.cpp  noise.py  package.xml
infantry_serial/: CMakeLists.txt  Readme.md  main.cpp  package.xml
infantry_serial/include/: Crc.hpp  LogPacket.hpp  LogStream.hpp  Packet.hpp  PacketBehavior.hpp  PacketInfo.hpp  PacketModel.hpp  RefereePacket.hpp  RefereeStream.hpp  SerialPacket.hpp  SerialStream.hpp  Stream.hpp  StreamBytesBuffer.hpp
infantry_serial/scripts/: angleToJointState.py
infantry_serial/src/: Crc.cpp  LogPacket.cpp  LogStream.cpp  Packet.cpp  PacketBehavior.cpp  PacketModel.cpp  RefereePacket.cpp  RefereeStream.cpp  RostopicStream.cpp  SerialStream.cpp  Stream.cpp  StreamBytesBuffer.cpp
