<?xml version="1.0"?>
<package format="2">
  <name>infantry_predict</name>
  <version>0.0.0</version>
  <description>The infantry_predict package</description>
  
  <maintainer email="babyxin@todo.todo">babyxin</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>tf2</build_depend>
  <exec_depend>tf2</exec_depend>

  <build_depend>tf2_ros</build_depend>
  <exec_depend>tf2_ros</exec_depend>

  <build_depend>infantry_msgs</build_depend>
  <exec_depend>infantry_msgs</exec_depend>

  <!-- <export>
  </export> -->
</package>
