<?xml version="1.0"?>
<package format="2">
  <name>infantry_serial</name>
  <version>0.0.0</version>
  <description>The infantry_serial package</description>
  
  <maintainer email="babyxin@todo.todo">babyxin</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>infantry_msgs</build_depend>
  <exec_depend>infantry_msgs</exec_depend>

  <!-- <export>
  </export> -->
</package>
